Fix file display alignment

--- a/test/artifacts/OtakClient_jar/windows/bundles/OtakClient/app/data/css/home.css
+++ b/test/artifacts/OtakClient_jar/windows/bundles/OtakClient/app/data/css/home.css
@@ -182,7 +182,8 @@ margin-top: 0px;
 }
 .icon{
   display: inline-block;
-  padding: 15px;
+  min-width: 150px;
+  min-height: 150px;
   text-align: center;
 }
 
